=== ongoing (0.3.X - to be released as 0.4) ===

- Fixed query for Prices on the Report view
- Showing IPN in QuotationItemAdmin
- made query for manufacturer case insensitive on quotation upload

=== 0.3 ===

- added BOM search in ReportView

=== 0.2 ===

- added manufacturer to the quotation item

=== 0.1.1 ===

- fixed urls

=== 0.1 ===

- Added QuotationUploadView
- Added ReportView
- Added datatables

=== 0.0.3 ===

- Updated README
- Added initial migrations

=== 0.0.2 ===

- Added factories and models
- Added admins
- Added django-aps-bom to test_requirements.txt because travis.ci fails

=== 0.0.1 ===

- Initial commit